--- a/src/app/initial-page/initial-page.component.scss
+++ b/src/app/initial-page/initial-page.component.scss
@@ -14,6 +14,13 @@
         padding: 16px;
         border-radius: 10px;
         color: white;
+        cursor: pointer;
+
+        &:hover{
+            background-color: white;
+            color: hsl(0, 68%, 62%);
+            border: 2px solid firebrick;
+        }
     }
 
     p{
