--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,23 @@
-<p>main works!</p>
+<mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+        <div>Channels</div> <!-- Holder -->
+        <div>Direct Messages</div> <!-- Holder -->
+    </mat-drawer>
+
+
+    <div class="header_wrapper">
+        <mat-toolbar class="header">
+            <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+                <mat-icon (click)="drawer.toggle()">menu</mat-icon>
+            </button>
+            <span>Slack-clone</span>
+            <span class="example-spacer"></span>
+            <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+                <mat-icon>favorite</mat-icon>
+            </button>
+            <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+                <mat-icon>share</mat-icon>
+            </button>
+        </mat-toolbar>
+    </div>
+</mat-drawer-container>
