--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,23 +1,18 @@
-<mat-drawer-container class="example-container" autosize>
+<div class="header_wrapper">
+    <mat-toolbar class="header">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+            <mat-icon (click)="drawer.toggle()">menu</mat-icon>
+        </button>
+        <span>Slack-clone</span>
+        <span class="example-spacer"></span>
+    </mat-toolbar>
+</div>
+<mat-drawer-container class="sidenav_wrapper" autosize>
     <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
         <div>Channels</div> <!-- Holder -->
         <div>Direct Messages</div> <!-- Holder -->
     </mat-drawer>
+    <router-outlet>
+    </router-outlet>
 
-
-    <div class="header_wrapper">
-        <mat-toolbar class="header">
-            <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-                <mat-icon (click)="drawer.toggle()">menu</mat-icon>
-            </button>
-            <span>Slack-clone</span>
-            <span class="example-spacer"></span>
-            <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-                <mat-icon>favorite</mat-icon>
-            </button>
-            <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-                <mat-icon>share</mat-icon>
-            </button>
-        </mat-toolbar>
-    </div>
 </mat-drawer-container>
