--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,11 +1,42 @@
-$base-color: rgb(25, 26, 26);
+$bg-color-1: rgb(35, 35, 35);
+$bg-color-2: rgb(38, 41, 43);
+$bg-color-3: rgb(20, 20, 20);
+$text-color: rgb(200, 200, 200);
 
 
 .header_wrapper{
+    // position: absolute;
+    top: 0px;
+    z-index: 1;
     width: 100%;
     min-height: 50px;
+
+    mat-toolbar{
+        height: 50px;
+        color: $text-color;
+
+        button{
+            background-color: unset;
+            border: unset;
+            color: $text-color;
+        }
+    }
 }
 
 .header{
-    background-color: $base-color;
+    background-color: $bg-color-1;
+}
+
+
+.sidenav_wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: $bg-color-2;
+    color: $text-color;
+}
+
+
+.sidenav{
+    background-color: $bg-color-3;
+    width: 300px;
 }
