Update header: search button

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,18 +1,37 @@
-<div class="header_wrapper">
-    <mat-toolbar class="header">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-            <mat-icon (click)="drawer.toggle()">menu</mat-icon>
-        </button>
-        <span>Slack-clone</span>
-        <span class="example-spacer"></span>
+<div class="content_wrapper">
+    <!-- Header -->
+    <mat-toolbar class="header_wrapper">
+        <div class="header_left">
+            <button mat-icon-button class="sidenav_button">
+                <mat-icon (click)="drawer.toggle()">menu</mat-icon>
+            </button>
+            <span>Slack-clone</span>
+            <span class="example-spacer"></span>
+        </div>
+        <div class="header_center">
+            <button mat-button (click)="openSearch()">
+                Search ...
+                <mat-icon>search</mat-icon>
+            </button>
+        </div>
+        <div class="header_right">
+            <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item>Item 1</button>
+                <button mat-menu-item>Item 2</button>
+            </mat-menu>
+        </div>
     </mat-toolbar>
-</div>
-<mat-drawer-container class="sidenav_wrapper" autosize>
-    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-        <div>Channels</div> <!-- Holder -->
-        <div>Direct Messages</div> <!-- Holder -->
-    </mat-drawer>
-    <router-outlet>
-    </router-outlet>
 
-</mat-drawer-container>
+    <!-- Sidenav -->
+
+    <mat-drawer-container class="sidenav_wrapper" autosize>
+        <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+            <div>Channels</div> <!-- Holder -->
+            <div>Direct Messages</div> <!-- Holder -->
+        </mat-drawer>
+        <router-outlet>
+        </router-outlet>
+
+    </mat-drawer-container>
+</div>
