--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,42 +1,96 @@
 $bg-color-1: rgb(35, 35, 35);
 $bg-color-2: rgb(38, 41, 43);
 $bg-color-3: rgb(20, 20, 20);
+$bg-color-4: rgb(250, 250, 250);
+$bg-color-5: rgb(150, 150, 150);
 $text-color: rgb(200, 200, 200);
 
-
-.header_wrapper{
-    // position: absolute;
-    top: 0px;
-    z-index: 1;
+.content_wrapper {
+    position: absolute;
+    height: 100svh;
     width: 100%;
-    min-height: 50px;
-
-    mat-toolbar{
-        height: 50px;
-        color: $text-color;
-
-        button{
-            background-color: unset;
-            border: unset;
-            color: $text-color;
-        }
-    }
 }
 
-.header{
+.header_wrapper {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 50px;
+    height: 50px;
+    color: $text-color;
+    padding: unset;
     background-color: $bg-color-1;
 }
 
 
-.sidenav_wrapper{
+
+.header_left {
+    display: flex;
+    align-items: center;
+
+    button {
+        height: 50px;
+        width: 50px;
+        background-color: unset;
+        border: unset;
+        color: $text-color;
+        transition: all 150ms ease-in-out;
+        margin-right: 20px;
+
+        &:hover {
+            cursor: pointer;
+            background-color: $text-color;
+            color: $bg-color-1;
+            transition: all 150ms ease-in-out;
+        }
+    }
+}
+
+.header_center {
+    position: relative;
+
+    button {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 300px;
+        height: 30px;
+        text-align: left;
+        padding-left: 20px;
+        background-color: $bg-color-5;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+
+.header_right {
+    .cdk-overlay-pane{
+        position: absolute;
+    }
+}
+
+
+.sidenav_wrapper {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 50px);
     background-color: $bg-color-2;
     color: $text-color;
 }
 
 
-.sidenav{
+.sidenav {
     background-color: $bg-color-3;
     width: 300px;
+}
+
+.cdk-overlay-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
 }
