--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+$bg-color-1: rgb(35, 35, 35);
+$bg-color-2: rgb(38, 41, 43);
+$bg-color-3: rgb(20, 20, 20);
+$bg-color-4: rgb(250, 250, 250);
+$bg-color-5: rgb(150, 150, 150);
+$text-color: rgb(200, 200, 200);
+
 *:root {
     $base-color: rgb(25, 26, 26);
 }
@@ -12,4 +19,20 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.cdk-overlay-pane {
+    position: relative !important;
+    width: 100% !important;
+    max-width: unset !important;
+    z-index: 10;
+}
+
+app-dialog-search {
+    position: fixed;
+    left: 54%;
+    top: 10px;
+    width: 500px;
+    transform: translateX(-50%);
+    background-color: $bg-color-1;
 }
