--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -27,9 +27,7 @@
 
     <mat-drawer-container class="sidenav_wrapper" autosize>
         <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-            <div>Channels</div> <!-- Holder -->
-            <div>Direct Messages</div> <!-- Holder -->
+            <app-sidenav></app-sidenav>
         </mat-drawer>
-
     </mat-drawer-container>
 </div>
