--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,6 +3,7 @@ $bg-color-2: rgb(38, 41, 43);
 $bg-color-3: rgb(20, 20, 20);
 $bg-color-4: rgb(250, 250, 250);
 $bg-color-5: rgb(150, 150, 150);
+$bg-color-6: rgb(100, 100, 100);
 $text-color: rgb(200, 200, 200);
 
 .content_wrapper {
@@ -48,27 +49,94 @@ $text-color: rgb(200, 200, 200);
 }
 
 .header_center {
-    position: relative;
+    width: 400px;
+    position: absolute;
+    left: 50%;
+    top: 10px;
+    transform: translateX(-50%);
 
-    button {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 300px;
-        height: 30px;
-        text-align: left;
-        padding-left: 20px;
-        background-color: $bg-color-5;
+    input {
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid $bg-color-5;
+        outline: unset;
+        background-color: $bg-color-6;
+        color: $bg-color-4;
+
+        &::placeholder {
+            color: $bg-color-4;
+        }
 
         &:hover {
             cursor: pointer;
+        }
+    }
+
+    .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:hover:not([aria-disabled=true]) {
+        background: unset;
+        cursor: unset;
+    }
+
+    .mat-expansion-panel {
+        color: $bg-color-4;
+        background-color: $bg-color-6;
+    }
+
+    mat-panel-title {
+        margin: unset;
+    }
+
+    mat-icon {
+        padding-left: 15px;
+        color: $bg-color-5;
+        width: 22px;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    .mat-mdc-form-field-icon-suffix>.mat-icon {
+        padding: unset;
+    }
+
+    .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+        background-color: inherit;
+    }
+}
+
+
+.search_history {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+
+    button {
+        text-align: left;
+        background-color: unset;
+        border: unset;
+        border-bottom: 1px solid transparent;
+        width: 100%;
+        color: $text-color;
+
+
+
+        &:hover {
+            cursor: pointer;
+            border-bottom: 1px solid $bg-color-5;
+        }
+
+        &:last-child {
+            align-self: end;
+            width: unset;
         }
     }
 }
 
 
 .header_right {
-    .cdk-overlay-pane{
+    .cdk-overlay-pane {
         position: absolute;
     }
 }
