--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -85,6 +85,7 @@ $text-color: rgb(200, 200, 200);
 .sidenav {
     background-color: $bg-color-3;
     width: 300px;
+    padding-left: 8px;
 }
 
 .cdk-overlay-container {
