--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,4 +1,23 @@
 <div class="menu-header">
-    <img src="assets/img/arrow-right.png">
+    <img *ngIf="channelsVisible == false" (click)="showChannels(true)" src="assets/img/arrow-right.png">
+    <img *ngIf="channelsVisible" (click)="showChannels(false)" src="assets/img/arrow-down.png">
     <span>Channels</span>
+</div>
+<div *ngIf="channelsVisible" class="channels">
+    <div *ngFor="let channel of channels" class="channel-item">
+        <span>#</span>
+        <span>{{ channel }}</span>
+    </div>
+</div>
+
+<div class="menu-header">
+    <img *ngIf="usersVisible == false" (click)="showUsers(true)" src="assets/img/arrow-right.png">
+    <img *ngIf="usersVisible" (click)="showUsers(false)" src="assets/img/arrow-down.png">
+    <span>Direktnachrichten</span>
+</div>
+<div *ngIf="usersVisible" class="channels">
+    <div *ngFor="let user of users" class="channel-item">
+        <span>#</span>
+        <span>{{ user }}</span>
+    </div>
 </div>
