--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -23,7 +23,7 @@
             </mat-expansion-panel>
         </div>
         <div class="header_right">
-            <button mat-button [matMenuTriggerFor]="myProfile">Menu</button>
+            <button class="header_user_profile" mat-button [matMenuTriggerFor]="myProfile"><img src="./assets/img/user.png"></button>
             <mat-menu #myProfile="matMenu" xPosition="before">
                 <button mat-menu-item>Item 1</button>
                 <button mat-menu-item>Item 2</button>
