--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -6,11 +6,13 @@ $bg-color-5: rgb(150, 150, 150);
 $bg-color-6: rgb(100, 100, 100);
 $text-color: rgb(200, 200, 200);
 
+
 .content_wrapper {
     position: absolute;
     height: 100svh;
     width: 100%;
 }
+
 
 .header_wrapper {
     position: relative;
@@ -23,7 +25,6 @@ $text-color: rgb(200, 200, 200);
     background-color: $bg-color-1;
     overflow: visible;
 }
-
 
 
 .header_left {
@@ -47,6 +48,7 @@ $text-color: rgb(200, 200, 200);
         }
     }
 }
+
 
 .header_center {
     width: 400px;
@@ -120,8 +122,6 @@ $text-color: rgb(200, 200, 200);
         width: 100%;
         color: $text-color;
 
-
-
         &:hover {
             cursor: pointer;
             border-bottom: 1px solid $bg-color-5;
@@ -136,8 +136,23 @@ $text-color: rgb(200, 200, 200);
 
 
 .header_right {
-    .cdk-overlay-pane {
-        position: absolute;
+    padding-right: 20px;
+    width: 50px;
+    height: 50px;
+
+    .header_user_profile {
+        width: 100%;
+        height: 100%;
+        padding: unset;
+        border-radius: 100%;
+        background-color: unset;
+        
+        img {
+            border-radius: 100%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
 
@@ -153,12 +168,4 @@ $text-color: rgb(200, 200, 200);
 .sidenav {
     background-color: $bg-color-3;
     width: 300px;
-}
-
-.cdk-overlay-container {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
 }
