--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,25 +8,43 @@
             <span>Slack-clone</span>
             <span class="example-spacer"></span>
         </div>
-        <div class="header_center">
+        <form class="header_center">
             <mat-expansion-panel hideToggle>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        <input placeholder="Search ..." matInput>
-                        <mat-icon matSuffix>search</mat-icon>
+                        <input [(ngModel)]="searchValue" name="searchValue" placeholder="Search ..." matInput>
+                        <mat-icon (click)="search()" mat-button>search</mat-icon>
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <mat-card-actions class="search_history">
                     <button *ngFor="let searched of searchlist"># {{searched}}</button>
-                    <button class="clear_search_btn" (click)="clearSearch()">clear search</button>
+                    <button class="clear_search_btn" mat-button (click)="clearSearch()">clear search</button>
                 </mat-card-actions>
             </mat-expansion-panel>
-        </div>
+        </form>
         <div class="header_right">
-            <button class="header_user_profile" mat-button [matMenuTriggerFor]="myProfile"><img src="./assets/img/user.png"></button>
-            <mat-menu #myProfile="matMenu" xPosition="before">
-                <button mat-menu-item>Item 1</button>
-                <button mat-menu-item>Item 2</button>
+            <button class="header_user_profile" mat-button [matMenuTriggerFor]="myProfile"><img
+                    src="./assets/img/user.png"></button>
+            <mat-menu class="header_user_menu" #myProfile="matMenu" xPosition="before">
+                <mat-card class="menu_user_profile" (click)="$event.stopPropagation();">
+                    <mat-card-header>
+                        <div mat-card-avatar class="menu_user_img"><img src="./assets/img/user.png"></div>
+                        <div class="menu_user_head">
+                            <mat-card-title>Munster Name Vorname</mat-card-title>
+                            <mat-card-subtitle>activ / inactive</mat-card-subtitle>
+                        </div>
+                    </mat-card-header>
+                    <mat-card-content class="menu_user_body">
+                        <div class="menu_status" matTooltip="Update your status" [matTooltipPosition]="'left'">Status
+                        </div>
+                        <div class="menu_profile" matTooltip="See your profile" [matTooltipPosition]="'left'">Profile
+                        </div>
+                        <div class="menu_logOut">
+                            <button routerLink="/" mat-button color="warn">Log out</button>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+
             </mat-menu>
         </div>
     </mat-toolbar>
