--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -144,17 +144,106 @@ $text-color: rgb(200, 200, 200);
         width: 100%;
         height: 100%;
         padding: unset;
-        border-radius: 100%;
         background-color: unset;
-        
+        border: unset;
+
         img {
-            border-radius: 100%;
+            border-radius: 20%;
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
+
+
 }
+
+// Menu User Profile
+.menu_user_profile {
+    width: 380px;
+    background-color: $bg-color-1;
+
+    mat-card-header {
+        padding: unset;
+        display: flex;
+        align-items: center;
+    }
+}
+
+.menu_user_img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+
+    img {
+        border-radius: 20%;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.menu_user_head {
+    display: flex;
+    flex-direction: column;
+
+    mat-card-title {
+        font-size: 1.3rem;
+        color: $text-color;
+    }
+
+    mat-card-subtitle {
+        font-size: 1rem;
+        color: $text-color;
+    }
+}
+
+.menu_status {
+    color: $bg-color-5;
+    background-color: $bg-color-3;
+    padding: 10px;
+    border: 1px solid transparent;
+
+    &:hover,
+    &:focus {
+        border: 1px solid $bg-color-5;
+        cursor: pointer;
+    }
+}
+
+
+.menu_profile {
+    color: $text-color;
+    margin: 10px;
+    border-bottom: 1px solid transparent;
+
+    &:hover,
+    &:focus {
+        border-bottom: 1px solid $text-color;
+        cursor: pointer;
+    }
+}
+
+
+.menu_logOut {
+    display: flex;
+    justify-content: flex-end;
+
+    button{
+        font-size: 18px;
+        color: red;
+        background-color:$bg-color-4;
+        border: 1px solid red;
+        transition: all 150ms ease-in-out;
+        
+        &:hover,&:focus{
+            color: $bg-color-4;
+            background-color:red;
+            border: 1px solid $bg-color-4;
+        }
+    }
+}
+
 
 
 .sidenav_wrapper {
@@ -169,12 +258,4 @@ $text-color: rgb(200, 200, 200);
     background-color: $bg-color-3;
     width: 300px;
     padding-left: 8px;
-}
-
-.cdk-overlay-container {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
 }
