--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,18 +21,11 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-// .cdk-overlay-pane {
-//     position: relative !important;
-//     width: 100% !important;
-//     max-width: unset !important;
-//     z-index: 10;
-// }
+.mat-mdc-menu-panel.mat-mdc-menu-panel {
+    max-width: unset !important;
+    border-radius: 10px;
+}
 
-// app-dialog-search {
-//     position: fixed;
-//     left: 54%;
-//     top: 10px;
-//     width: 500px;
-//     transform: translateX(-50%);
-//     background-color: $bg-color-1;
-// }
+.mat-mdc-menu-content{
+    padding: unset !important;
+}
