Go to main from App Name

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,7 +5,7 @@
             <button mat-icon-button class="sidenav_button">
                 <mat-icon (click)="drawer.toggle()">menu</mat-icon>
             </button>
-            <span>Slack-clone</span>
+            <span class="name_app" routerLink="/main" >Slack-clone</span>
             <span class="example-spacer"></span>
         </div>
         <form class="header_center">
