--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -7,6 +7,10 @@ $bg-color-6: rgb(100, 100, 100);
 $text-color: rgb(200, 200, 200);
 
 
+.name_app{
+    cursor: pointer;
+}
+
 .content_wrapper {
     position: absolute;
     height: 100svh;
