update User Class and added 'add user' button

--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -1,5 +1,6 @@
 <div class="log_in_holder">
     The following button is just a holder to bypass the login section
     <button routerLink="/main">Log In</button>
+    <button (click)="openDialogAddUser()">Add user - holder</button> <!-- Fake holder for Sign In-->
     <p>P.S. Smile and have a wanderfull day</p>
 </div>
