--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -43,3 +43,25 @@
         background-color: rgb(56, 56, 56);
     }
 }
+
+.background-focused {
+    background-color: rgb(49, 135, 227);
+    color: white !important;
+}
+
+.user-item {
+    padding-left: 9px !important;
+    gap: 4px !important;
+}
+
+.letter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    border-radius: 5px;
+    width: 24px;
+    height: 24px;
+    color: white;
+    background-color: rgb(103, 101, 120);
+}
