--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -20,10 +20,10 @@
         padding-right: 4px;
         padding-bottom: 4px;
         border-radius: 5px;
-        &:hover {
-            cursor: pointer;
-            background-color: rgb(56, 56, 56);
-        }
+        // &:hover {
+        //     cursor: pointer;
+        //     background-color: rgb(56, 56, 56);
+        // }
     }
 }
 
@@ -54,6 +54,11 @@
     gap: 4px !important;
 }
 
+.add-channel {
+    padding-left: 11px !important;
+    gap: 5px !important;
+}
+
 .letter {
     display: flex;
     align-items: center;
@@ -64,4 +69,14 @@
     height: 24px;
     color: white;
     background-color: rgb(103, 101, 120);
+}
+
+.add-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(69, 69, 69);
 }
