--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,11 +1,11 @@
 <div class="user_profile_wrapper">
     <div class="user_profile_img"><img src="./assets/img/user.png"></div>
     <div class="user_profile_infos">
-        <h2> Munster Vorname Nachname</h2>
-        <p> status</p>
+        <h2>{{user.firstName}} {{user.lastName}}</h2>
+        <p> {{user.status}}</p>
     </div>
     <div class="user_profile_contact">
-        <h3>Email</h3>
-        <h3>Telefon</h3>
+        <a [href]="'mailto:' + user.email">{{user.email}}</a>
+        <a [href]="'tel:'+ user.telephone">{{user.telephone}}</a>
     </div>
 </div>
