--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -48,5 +48,21 @@ $text-color: rgb(200, 200, 200);
 
 
 .user_profile_contact{
+    display: flex;
+    flex-direction: column;
+    gap:16px;
     padding-block: 32px;
+
+    a{
+        width: min-content;
+        text-decoration: none;
+        color: $text-color;
+        border-bottom: 1px solid transparent;
+
+
+        &:hover{
+            cursor: pointer;
+            border-bottom: 1px solid $bg-color-4;
+        }
+    }
 }
