Userprofile from firebase + select status unfinished

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -23,8 +23,8 @@
             </mat-expansion-panel>
         </form>
         <div class="header_right">
-            <button class="header_user_profile" mat-button [matMenuTriggerFor]="myProfile"><img
-                    src="./assets/img/user.png"></button>
+            <button class="header_user_profile" #badge mat-button [matMenuTriggerFor]="myProfile" matBadge="0"
+                matBadgePosition="below"><img src="./assets/img/user.png"></button>
             <mat-menu class="header_user_menu" #myProfile="matMenu" xPosition="before">
                 <mat-card class="menu_user_profile" (click)="$event.stopPropagation();">
                     <mat-card-header>
@@ -35,7 +35,7 @@
                         </div>
                     </mat-card-header>
                     <mat-card-content class="menu_user_body">
-                        <div class="menu_status" matTooltip="Update your status" [matTooltipPosition]="'left'">Status
+                        <div (click)="openDialogAddStatus()" class="menu_status" matTooltip="Update your status" [matTooltipPosition]="'left'">Status
                         </div>
                         <div [routerLink]="['/main/', urlID,{ outlets: {body:['profil']}}]" class="menu_profile"
                             matTooltip="See your profile" [matTooltipPosition]="'left'">Profile
