--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -7,7 +7,7 @@ $bg-color-6: rgb(100, 100, 100);
 $text-color: rgb(200, 200, 200);
 
 
-.name_app{
+.name_app {
     cursor: pointer;
 }
 
@@ -140,30 +140,35 @@ $text-color: rgb(200, 200, 200);
 
 
 .header_right {
+    padding-top: 12px;
     padding-right: 20px;
-    width: 50px;
-    height: 50px;
 
     .header_user_profile {
-        width: 100%;
-        height: 100%;
         padding: unset;
         background-color: unset;
         border: unset;
 
         img {
             border-radius: 20%;
-            width: 100%;
-            height: 100%;
+            width: 50px;
+            height: 50px;
             object-fit: cover;
         }
+
+        button {
+        
+        }
     }
-
-
 }
+
+.mat-badge.hide-text .mat-badge-content {
+    color: transparent;
+}
+
 
 // Menu User Profile
 .menu_user_profile {
+    margin-top: 10px;
     width: 380px;
     background-color: $bg-color-1;
 
@@ -233,16 +238,17 @@ $text-color: rgb(200, 200, 200);
     display: flex;
     justify-content: flex-end;
 
-    button{
+    button {
         font-size: 18px;
         color: red;
-        background-color:$bg-color-4;
+        background-color: $bg-color-4;
         border: 1px solid red;
         transition: all 150ms ease-in-out;
-        
-        &:hover,&:focus{
+
+        &:hover,
+        &:focus {
             color: $bg-color-4;
-            background-color:red;
+            background-color: red;
             border: 1px solid $bg-color-4;
         }
     }
