--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,3 +68,13 @@ body {
 .mdc-menu-surface{
     background-color: transparent;
 }
+
+#mat-badge-content-0 {
+    color: transparent;
+    background: green;
+    left: 45px;
+    bottom: -1px;
+    width: 12px;
+    height: 12px;
+    z-index: 10;
+}
