--- a/src/app/initial-page/initial-page.component.scss
+++ b/src/app/initial-page/initial-page.component.scss
@@ -27,3 +27,34 @@
         font-size: 1.4rem;
     }
 }
+
+.login-container{
+    background-color: bisque;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+mat-card {
+    width: 400px;
+    padding: 32px;
+    text-align: center;
+    border-radius: 30px;
+    display: flex;
+    gap: 25px;
+
+    mat-card-title{
+        font-size: 32px;
+    }
+}
+
+.button-holder{
+    display: flex;
+    justify-content: space-between;
+}
+
+mat-form-field{
+    width: 100%;
+}
