--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -11,24 +11,25 @@
     <mat-card>
         <mat-card-title>Login</mat-card-title>
 
-        <div>
-            <mat-form-field>
-                <mat-label>Email</mat-label>
-                <input matInput type="email">
-            </mat-form-field>
-        </div>
-        <div>
-            <mat-form-field>
-                <mat-label>Password</mat-label>
-                <input type="password" matInput>
-            </mat-form-field>
-        </div>
-        <div class="button-holder">
-            <button mat-raised-button>Forgot Password</button>
-            <button (click)="bypassLogIn()" mat-raised-button>Guest Login</button>
-        </div>
-        <button (click)="logIn()" mat-raised-button color="primary">Login</button>
-        <button (click)="openDialogAddUser()" mat-raised-button>Sign In</button>
-
+        <form (ngSubmit)="loginAsUser()" [formGroup]="loginForm">
+            <div>
+                <mat-form-field>
+                    <mat-label>Enter your Email</mat-label>
+                    <input type="email" formControlName="email" required #emailSignup>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field>
+                    <mat-label>Enter your Password</mat-label>
+                    <input type="password" formControlName="password" required #passswordSignup>
+                </mat-form-field>
+            </div>
+            <div class="button-holder">
+                <button mat-raised-button>Forgot Password</button>
+                <button (click)="bypassLogIn()" mat-raised-button>Guest Login</button>
+            </div>
+            <button (click)="onSignup(emailSignup.value, passswordSignup.value)" [disabled]="loginForm.invalid" mat-raised-button color="primary">Login</button>
+            <button (click)="openDialogAddUser()" mat-raised-button>Sign In</button>
+        </form>
     </mat-card>
 </div>
