--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -45,8 +45,8 @@
                         </div>
                     </mat-card-content>
                 </mat-card>
-
             </mat-menu>
+            <app-chat></app-chat>
         </div>
     </mat-toolbar>
 
