--- a/src/app/dialog-add-status/dialog-add-status.component.html
+++ b/src/app/dialog-add-status/dialog-add-status.component.html
@@ -1,11 +1,9 @@
-<div>
-    <h2>Status</h2>
-    <mat-form-field appearance="fill">
-        <mat-label>Status</mat-label>
-        <input matInput #inputStatus [(ngModel)]="status">
-    </mat-form-field>
-    <button (click)="selectStatus('one')" value="one">Away from keyboard</button>
-    <button (click)="selectStatus('two')" value="two">In meeting</button>
-    <button (click)="selectStatus('three')" value="three">In home office</button>
-
-</div>
+<h2>Status</h2>
+<mat-form-field appearance="fill">
+    <mat-label>Status</mat-label>
+    <input matInput #inputStatus [(ngModel)]="status">
+    <mat-icon (click)="addNewStatus(status)">add</mat-icon>
+</mat-form-field>
+<button (click)="selectStatus('Away from keyboard')" value="one">Away from keyboard</button>
+<button (click)="selectStatus('In meeting')" value="two">In meeting</button>
+<button (click)="selectStatus('In home office')" value="three">In home office</button>
