--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -4,9 +4,13 @@
     <span>Channels</span>
 </div>
 <div *ngIf="channelsVisible" class="channels">
-    <div *ngFor="let channel of channels$ | async; let i = index" id="channel{{ i }}" class="channel-item" (click)="openMenuItem('channel', i)">
-        <span>#</span>
-        <span>{{ channel.title }}</span>
+    <div *ngFor="let channel of channels$ | async; let i = index" id="channel{{ i }}" class="channel-item"
+        (click)="openMenuItem('channel', i)">
+        <div class="channel_container"
+            [routerLink]="['/main/', urlID,{ outlets: {body:['channels', channel,channel]}}]">
+            <span>#</span>
+            <span>{{ channel.title }}</span>
+        </div>
     </div>
 </div>
 <div class="channel-item add-channel" (click)="openAddChannelDialog()">
@@ -20,8 +24,12 @@
     <span>Direktnachrichten</span>
 </div>
 <div *ngIf="usersVisible" class="channels">
-    <div *ngFor="let user of users$ | async; let i = index" id="user{{ i }}" class="channel-item user-item" (click)="openMenuItem('user', i)">
-        <span class="letter">{{ firstLetter[i] }}</span>
-        <span>{{ user.firstName }} {{ user.lastName }}</span>
+    <div *ngFor="let user of users$ | async; let i = index" id="user{{ i }}" class="channel-item user-item"
+        (click)="openMenuItem('user', i)">
+        <div class="contact_container"
+            [routerLink]="['/main/', urlID,{ outlets: {body:['direct_messages', user.ID]}}]">
+            <span class="letter">{{ firstLetter[i] }}</span>
+            <span>{{ user.firstName }} {{ user.lastName }}</span>
+        </div>
     </div>
 </div>
