--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -4,10 +4,12 @@
     <span>Channels</span>
 </div>
 <div *ngIf="channelsVisible" class="channels">
-    <div *ngFor="let channel of channels$ | async; let i = index" id="channel{{ i }}" class="channel-item"
-        (click)="openMenuItem('channel', i)">
-        <div class="channel_container"
-            [routerLink]="['/main/', urlID,{ outlets: {body:['channels', channel,channel]}}]">
+    <div *ngFor="let channel of channels$ | async; let i = index" 
+        id="channel{{ i }}" 
+        class="channel-item"
+        (click)="highlightMenuItem('channel', i)" 
+        [routerLink]="['/main/', urlID,{ outlets: {body:['channels', channel.ID]}}]">
+        <div class="channel_container">
             <span>#</span>
             <span>{{ channel.title }}</span>
         </div>
@@ -24,10 +26,12 @@
     <span>Direktnachrichten</span>
 </div>
 <div *ngIf="usersVisible" class="channels">
-    <div *ngFor="let user of users$ | async; let i = index" id="user{{ i }}" class="channel-item user-item"
-        (click)="openMenuItem('user', i)">
-        <div class="contact_container"
-            [routerLink]="['/main/', urlID,{ outlets: {body:['direct_messages', user.ID]}}]">
+    <div *ngFor="let user of users$ | async; let i = index" 
+        id="user{{ i }}" 
+        class="channel-item user-item"
+        (click)="highlightMenuItem('user', i)" 
+        [routerLink]="['/main/', urlID,{ outlets: {body:['direct_messages', user.ID]}}]">
+        <div class="contact_container">
             <span class="letter">{{ firstLetter[i] }}</span>
             <span>{{ user.firstName }} {{ user.lastName }}</span>
         </div>
