--- a/src/app/channels/channels.component.scss
+++ b/src/app/channels/channels.component.scss
@@ -1,11 +1,10 @@
 .input-container {
-    position: fixed;
+    position: sticky;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     gap: 8px;
-    left: 316px;
-    right: 16px;
-    bottom: 24px;
+    margin-bottom: 24px;
     background-color: rgb(65, 61, 61);
     border: solid rgb(198, 198, 198);
     border-radius: 5px;
@@ -23,4 +22,99 @@
     button {
         width: 100px;
     }
+}
+
+.body-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    margin-top: 32px;
+    margin-left: 32px;
+    margin-right: 32px;
+    height: calc(100vh - 96px);
+}
+
+.body-flex {
+    padding-right: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.message-container {
+    display: flex;
+    gap: 16px;
+    padding-bottom: 32px;
+    h3 {
+        margin: 0;
+    }
+}
+
+.profile-img {
+    img {
+        width: 32px;
+        height: 32px;
+        background-color: white;
+        border: solid white;
+        border-radius: 5px;
+    }
+}
+
+.headline {
+    display: flex;
+    align-items: baseline;
+    gap: 16px;
+    padding-bottom: 4px;
+    b {
+        font-size: 18px;
+    }
+
+    span {
+        font-size: 14px;
+        color: rgb(148, 148, 148);
+    }
+}
+
+.response {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    padding-top: 6px;
+    cursor: pointer;
+    img {
+        background-color: rgb(130, 3, 136);
+        border: solid rgb(130, 3, 136);
+        border-radius: 5px;
+    }
+    span {
+        color: rgb(49, 135, 227);
+        text-decoration: underline;
+    }
+}
+
+.answer-container {
+    max-width: 350px;
+    width: 100%;
+
+    padding-left: 16px;
+    border-left: 1px solid rgb(141, 141, 141);
+}
+
+.input-container-answer {
+    margin-top: 32px;
+}
+
+.answer-image {
+    width: 16px;
+    height: 16px;
+    background-color: rgb(130, 3, 136);
+    border: solid rgb(130, 3, 136);
+    border-radius: 5px;
+}
+
+.answer-container-topic {
+    padding-bottom: 8px;
+    margin-bottom: 32px;
+    border-bottom: 1px solid rgb(198, 198, 198);
 }
