--- a/src/app/dialog-add-user-holder/dialog-add-user-holder.component.html
+++ b/src/app/dialog-add-user-holder/dialog-add-user-holder.component.html
@@ -1,32 +1,41 @@
-<h2>Add a user</h2>
 <div mat-dialog-content class="add_user_wrapper">
-    <div class="width_full">
-        <mat-form-field class="mr-16" appearance="outline">
-            <mat-label>First name</mat-label>
-            <input [disabled]="loading" type="text" [(ngModel)]="user.firstName" matInput placeholder="Add first name">
+    <h2>Enter your data to create a new account</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <div class="width_full">
+            <mat-form-field class="mr-16" appearance="outline">
+                <mat-label>First name</mat-label>
+                <input id="firstName" type="text" matInput
+                formControlName="userFirstName" placeholder="Your first name*" required>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Last name</mat-label>
+                <input id="lastName" type="text" matInput
+                formControlName="userLastName" placeholder="Your last name*" required>
+            </mat-form-field>
+        </div>
+        <mat-form-field class="width_full" appearance="outline">
+            <mat-label>Email</mat-label>
+            <input id="email" type="email" matInput 
+            formControlName="userEmail" placeholder="Your email*" required>
+            <label class="red-required" *ngIf="emailInvalid">Not a valid email</label>
         </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Last name</mat-label>
-            <input [disabled]="loading" type="text" [(ngModel)]="user.lastName" matInput placeholder="Add last name">
-        </mat-form-field>
-    </div>
-    <mat-form-field class="width_full" appearance="outline">
-        <mat-label>Email</mat-label>
-        <input [disabled]="loading" type="email" [(ngModel)]="user.email" matInput placeholder="Add email">
-    </mat-form-field>
-    <div>
-        <mat-form-field class="mr-16" appearance="outline">
-            <mat-label>Password</mat-label>
-            <input [disabled]="loading" type="password" [(ngModel)]="user.password" matInput placeholder="Add password">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Telephone</mat-label>
-            <input [disabled]="loading" type="tel" [(ngModel)]="user.telephone" matInput placeholder="Add Telephone">
-        </mat-form-field>
-    </div>
-    <div mat-dialog-actions>
-        <button (click)="dialogRef.close()" [disabled]="loading" mat-button mat-dialog-close>Cancel</button>
-        <button [disabled]="loading" (click)="saveUser()" mat-button mat-dialog-close cdkFocusInitial>Ok</button>
-    </div>
-    <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+        <div>
+            <mat-form-field class="mr-16" appearance="outline">
+                <mat-label>Password</mat-label>
+                <input id="password" type="password" matInput
+                formControlName="userPassword" placeholder="Your password*" required>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Telephone</mat-label>
+                <input id="telephone" type="tel" matInput
+                 placeholder="Your Telephone">
+                <label class="red-required" *ngIf="phoneInvalid">Not a valid number</label>
+            </mat-form-field>
+        </div>
+        <div mat-dialog-actions>
+            <button (click)="dialogRef.close()" mat-button mat-dialog-close>Cancel</button>
+            <button type="submit" mat-button cdkFocusInitial>Ok</button>
+        </div>
+
+    </form>
 </div>
