--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -8,6 +8,7 @@
 
 
 <div class="login-container">
+    <img class="logo" src="../assets/img/logo_black.png">
     <mat-card>
         <mat-card-title>Login</mat-card-title>
 
